--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ android {
     buildToolsVersion '31.0.0'
     defaultConfig {
         applicationId "com.example.ale.medidas"
-        minSdkVersion 15
+        //minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
