--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 28
     buildToolsVersion '31.0.0'
     defaultConfig {
         applicationId "com.example.ale.medidas"
         minSdkVersion 15
-        targetSdkVersion 31
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,24 +20,29 @@ android {
 }
 
 repositories {
-    flatDir {
-        dirs 'libs'
-    }
+    maven {
+             url 'https://maven.google.com'
+        }
+//    flatDir {
+//        dirs 'libs'
+//    }
 }
 
 dependencies {
     //compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //compile files('libs/neoncore-release.aar')
-    compile (name:'neoncore-release', ext:'aar')
-    compile files('libs/GraphView-4.2.1.jar')
-    compile project(':commons-lang3-3.5')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-drive:10.2.6'
-    testCompile 'junit:junit:4.12'
+    implementation files('libs/neoncore-release.aar')
+    //implementation(name:'neoncore-release', ext:'aar')
+    implementation files('libs/GraphView-4.2.1.jar')
+    implementation project(':commons-lang3-3.5')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:media-compat:28.0.0'
+    implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.jakewharton:butterknife:6.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.android.gms:play-services-drive:10.2.6'
+    testImplementation 'junit:junit:4.12'
 }
